--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8666,205 +8666,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #cc97e7; }
+  background: #474d8c; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #bc2fdd; }
+  background: #5fcad6; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #f9b7fc; }
+  background: #dfc303; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #889a9d; }
+  background: #938e9d; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #7fb38d; }
+  background: #4b2293; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #7dd55e; }
+  background: #6f4ee8; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #2b3ba1; }
+  background: #c2c25c; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #c51795; }
+  background: #647d5b; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #cc018b; }
+  background: #c0696b; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #e20710; }
+  background: #558196; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #8b673e; }
+  background: #8783b0; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #14ddd8; }
+  background: #454fd4; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #faba33; }
+  background: #e864e3; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #59dcb3; }
+  background: #fa8b9a; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #08118e; }
+  background: #8403be; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #c3dca2; }
+  background: #0d20af; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #2dc8fa; }
+  background: #e0e739; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #5df664; }
+  background: #02be04; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #38553c; }
+  background: #591644; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #ef4727; }
+  background: #14364d; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #d01e2b; }
+  background: #1c33c8; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #2206f1; }
+  background: #8bca4f; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #dbd705; }
+  background: #e2dab0; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #480dc2; }
+  background: #031d0a; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #315eea; }
+  background: #a22f4d; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #3b15e4; }
+  background: #06f572; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #7351f5; }
+  background: #b7d917; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #4bc245; }
+  background: #cac64c; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #9132c8; }
+  background: #7d1f1b; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #241ac2; }
+  background: #b1e3be; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #761b69; }
+  background: #f0db51; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #ac03c3; }
+  background: #4a05e8; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #c6d089; }
+  background: #59f3b3; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #aaa268; }
+  background: #eefa04; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #9685cb; }
+  background: #1bdd54; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #bceb38; }
+  background: #bee276; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #7ece66; }
+  background: #2c3ca8; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #e3556d; }
+  background: #280bd3; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #c4c702; }
+  background: #766794; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #dca28e; }
+  background: #67eb91; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #10a3c2; }
+  background: #d11176; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #2ec802; }
+  background: #35b401; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #f98eee; }
+  background: #ac7913; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #a295d7; }
+  background: #905216; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #1b0e31; }
+  background: #e905e1; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #b624f7; }
+  background: #5e098d; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #2d0488; }
+  background: #924602; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #f05c3d; }
+  background: #51441e; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #455976; }
+  background: #28ed69; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #34d677; }
+  background: #560e4d; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #8c9b58; }
+  background: #338ce3; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #647677; }
+  background: #3d53f9; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #6d540f; }
+  background: #325379; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #3626cc; }
+  background: #8cce9b; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #5514d2; }
+  background: #cc30d4; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #13836a; }
+  background: #7ed4a1; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #9d3f9e; }
+  background: #1c2006; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #8ba568; }
+  background: #f3ea84; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #3a287a; }
+  background: #4bf332; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #5aa9fd; }
+  background: #e0cd72; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #e76846; }
+  background: #0ae2c4; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #0ca999; }
+  background: #3acc86; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #ba5f65; }
+  background: #4fc87f; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #a5bd4a; }
+  background: #93d016; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #2592a8; }
+  background: #8b414c; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #e282fe; }
+  background: #a5d8ad; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #5b20aa; }
+  background: #d8f525; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #420c46; }
+  background: #d5ae62; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #ae209a; }
+  background: #f333ed; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #63f179; }
+  background: #81e286; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #d8ac47; }
+  background: #fffa9d; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #ceaf84; }
+  background: #5a3ee3; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #d8651c; }
+  background: #075465; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #936183; }
+  background: #72204b; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #48338f; }
+  background: #fbf74c; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #856aa5; }
+  background: #d1dc5f; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #64de73; }
+  background: #4d1348; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #6d3261; }
+  background: #d12b1e; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #b03dee; }
+  background: #561f81; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #3e51d8; }
+  background: #60a4eb; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #977444; }
+  background: #0ea2a0; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #8e8862; }
+  background: #01ffd5; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #aa9b8c; }
+  background: #35e684; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #77caa0; }
+  background: #4f8e82; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #767a1d; }
+  background: #bdbb92; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #c2a46f; }
+  background: #2f54b7; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #28b786; }
+  background: #1ceaa3; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #82ce9a; }
+  background: #ca0e6f; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #f2466c; }
+  background: #14b5c5; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #56b46f; }
+  background: #0b4e40; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #b7f747; }
+  background: #ead2b5; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #1e6a30; }
+  background: #7040db; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #6840c7; }
+  background: #0161e9; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #d7f25c; }
+  background: #97ac0d; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #cde866; }
+  background: #d5263d; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #710a06; }
+  background: #edd3cd; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #e8b2ef; }
+  background: #fa367e; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #25eeb7; }
+  background: #471794; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #698379; }
+  background: #6b2966; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #d3cf48; }
+  background: #dbf297; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11464,15 +11464,11 @@ input:checked + .sliders:before {
 .role-to-txt h2 {
   padding-left: 35px; }
 
-.modal-add-connections-wrapper
-.adding-adapter-modal-header
-.adapter-modal-logo {
+.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-logo {
   height: 55px !important;
   width: 55px !important; }
 
-.modal-add-connections-wrapper
-.adding-adapter-modal-header
-.adapter-modal-name {
+.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-name {
   font-size: 20px !important; }
 
 .modal-add-connections-wrapper input[type="text"] {
@@ -12262,15 +12258,15 @@ td .check-container {
   transform: translateX(57px); }
 
 .connectors-box-wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center; }
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+  grid-gap: 30px;
+  overflow-x: hidden; }
   .connectors-box-wrapper .connec-box-div {
     background: #fff;
     padding: 10px;
     border-radius: 14px;
-    text-align: center;
-    flex-basis: 245px; }
+    text-align: center; }
     .connectors-box-wrapper .connec-box-div .box-logo a {
       display: inline-block;
       background: white;
@@ -12292,9 +12288,11 @@ td .check-container {
         top: 0;
         bottom: 0px; }
     .connectors-box-wrapper .connec-box-div .box-title {
-      font-size: 20px;
+      font-size: 18px;
       color: #212529;
       margin-bottom: 30px; }
+    .connectors-box-wrapper .connec-box-div .box-content {
+      height: 50px; }
     .connectors-box-wrapper .connec-box-div .box-learnmore-btn {
       margin: 20px 0px; }
       .connectors-box-wrapper .connec-box-div .box-learnmore-btn a {
