--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8666,205 +8666,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #474d8c; }
+  background: #54ddfe; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #5fcad6; }
+  background: #06c2d6; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #dfc303; }
+  background: #72ff68; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #938e9d; }
+  background: #b9fee0; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #4b2293; }
+  background: #5cb1cc; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #6f4ee8; }
+  background: #9ed879; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #c2c25c; }
+  background: #b8b0ea; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #647d5b; }
+  background: #0db6d2; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #c0696b; }
+  background: #deeeb0; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #558196; }
+  background: #cf9cce; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #8783b0; }
+  background: #6aaaa9; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #454fd4; }
+  background: #371124; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #e864e3; }
+  background: #97e98a; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #fa8b9a; }
+  background: #7a59ae; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #8403be; }
+  background: #b44652; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #0d20af; }
+  background: #879d71; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #e0e739; }
+  background: #68b8ad; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #02be04; }
+  background: #0eaf8a; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #591644; }
+  background: #55a84e; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #14364d; }
+  background: #91824d; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #1c33c8; }
+  background: #217f55; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #8bca4f; }
+  background: #ef5a0b; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #e2dab0; }
+  background: #4e9d5a; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #031d0a; }
+  background: #fba3d8; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #a22f4d; }
+  background: #25ace9; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #06f572; }
+  background: #96c094; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #b7d917; }
+  background: #a840b5; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #cac64c; }
+  background: #b1c915; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #7d1f1b; }
+  background: #2b4543; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #b1e3be; }
+  background: #71b437; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #f0db51; }
+  background: #a27617; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #4a05e8; }
+  background: #39ef3d; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #59f3b3; }
+  background: #77464b; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #eefa04; }
+  background: #25b743; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #1bdd54; }
+  background: #b77556; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #bee276; }
+  background: #6b9ff4; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #2c3ca8; }
+  background: #9d9b4f; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #280bd3; }
+  background: #6a5719; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #766794; }
+  background: #d9a0cd; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #67eb91; }
+  background: #59e7c2; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #d11176; }
+  background: #a92539; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #35b401; }
+  background: #a470f5; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #ac7913; }
+  background: #0bd12e; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #905216; }
+  background: #38a43a; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #e905e1; }
+  background: #9af792; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #5e098d; }
+  background: #6c9bc4; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #924602; }
+  background: #4b436b; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #51441e; }
+  background: #6187a8; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #28ed69; }
+  background: #886e1d; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #560e4d; }
+  background: #ebbd20; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #338ce3; }
+  background: #7e8121; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #3d53f9; }
+  background: #13c346; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #325379; }
+  background: #fb18af; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #8cce9b; }
+  background: #cde323; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #cc30d4; }
+  background: #dc3104; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #7ed4a1; }
+  background: #520408; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #1c2006; }
+  background: #a38e1f; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #f3ea84; }
+  background: #47a2ac; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #4bf332; }
+  background: #03d7b6; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #e0cd72; }
+  background: #4f25a4; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #0ae2c4; }
+  background: #c9852a; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #3acc86; }
+  background: #118620; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #4fc87f; }
+  background: #749ebd; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #93d016; }
+  background: #35b12a; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #8b414c; }
+  background: #fe5747; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #a5d8ad; }
+  background: #600a2b; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #d8f525; }
+  background: #cf837a; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #d5ae62; }
+  background: #313069; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #f333ed; }
+  background: #eef692; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #81e286; }
+  background: #e18ef0; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #fffa9d; }
+  background: #4080e0; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #5a3ee3; }
+  background: #8d15b1; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #075465; }
+  background: #6aa737; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #72204b; }
+  background: #03f9a4; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #fbf74c; }
+  background: #ca0b86; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #d1dc5f; }
+  background: #26f71c; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #4d1348; }
+  background: #e3677a; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #d12b1e; }
+  background: #feb16a; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #561f81; }
+  background: #8a4ddf; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #60a4eb; }
+  background: #72c7ca; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #0ea2a0; }
+  background: #c7984d; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #01ffd5; }
+  background: #cd5503; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #35e684; }
+  background: #a1290e; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #4f8e82; }
+  background: #655d93; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #bdbb92; }
+  background: #0949fb; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #2f54b7; }
+  background: #3d7149; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #1ceaa3; }
+  background: #0e12bb; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #ca0e6f; }
+  background: #e384e4; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #14b5c5; }
+  background: #a40c3d; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #0b4e40; }
+  background: #91dfe5; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #ead2b5; }
+  background: #bd66eb; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #7040db; }
+  background: #f3b177; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #0161e9; }
+  background: #edf5ee; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #97ac0d; }
+  background: #b7d8ff; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #d5263d; }
+  background: #3e1878; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #edd3cd; }
+  background: #14e664; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #fa367e; }
+  background: #0863e4; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #471794; }
+  background: #c530be; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #6b2966; }
+  background: #03e569; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #dbf297; }
+  background: #0ad093; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12261,7 +12261,8 @@ td .check-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
   grid-gap: 30px;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+  margin-top: 40px; }
   .connectors-box-wrapper .connec-box-div {
     background: #fff;
     padding: 10px;
