--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -1835,6 +1835,7 @@ td {
   grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
   grid-gap: 30px;
   overflow-x: hidden;
+  margin-top: 40px;
 
   .connec-box-div {
     background: #fff;
